# edgeviewer

./: README.md
android-extended/: README-ANDROID.md  local.properties  settings.gradle.kts
android-extended/app/: build.gradle.kts
android-extended/app/src/main/: AndroidManifest.xml
android-extended/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-extended/app/src/main/java/com/example/edgeviewer/: MainActivity.kt
android-extended/app/src/main/java/com/example/edgeviewer/camera/: Camera2Helper.kt
android-extended/app/src/main/res/values/: strings.xml
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: index.ts
